--- a/index.html
+++ b/index.html
@@ -357,6 +357,19 @@ For the detailed schema and it's description click on link below on Read More bu
               </div>
             </div>
           </section>
+          <section id="void" class="top-image">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+
+                <div class="down-content">
+                  <h4>Void Representation</h4>
+                  <p>The void representation of the RELD is available <a href="https://github.com/dice-group/RELD/blob/main/void.ttl">online</a> on our GitHub repository. The description of RELD it's the creator, and almost all metadata is defined according to http://rdfs.org/ns/void#. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          </section>
           <!-- Usage-->
           <section id="usage" class="top-image">
           <div class="container-fluid">
@@ -535,6 +548,7 @@ For the detailed schema and it's description click on link below on Read More bu
                     <li><a href="#namespaces">Namespaces</a></li>
                     <li><a href="#example">Example Resource</a></li>
                     <li><a href="#query">Queries</a></li>
+                    <li><a href="#void">Void Representation</a></li>
                     <li><a href="#usage">Usage</a></li>
 
                   </ul>
