--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@ For the detailed schema and it's description click on link below on Read More bu
               </div>
             </div>
           </section>
+<!-- void -->
           <section id="void" class="top-image">
           <div class="container-fluid">
             <div class="row">
@@ -365,6 +366,20 @@ For the detailed schema and it's description click on link below on Read More bu
                 <div class="down-content">
                   <h4>Void Representation</h4>
                   <p>The void representation of the RELD is available <a href="https://github.com/dice-group/RELD/blob/main/void.ttl">online</a> on our GitHub repository. The description of RELD it's the creator, and almost all metadata is defined according to http://rdfs.org/ns/void#. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          </section>
+          <!-- drefrencability -->
+          <section id="dref" class="top-image">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+
+                <div class="down-content">
+                  <h4>Dereferencing our resources</h4>
+                  <p> We also allow dereferencing our dataset URIs using LodView <a href="http://reld.cs.upb.de:8080/lodview/R-1.0.html">link</a>. LodView allows RELD users to browse our RDF resource and offers easy-to-use representation of the RDF data. An example resource from the LodView is shown in the <a href="">figure</a>.</p>
                 </div>
               </div>
             </div>
@@ -521,6 +536,25 @@ For the detailed schema and it's description click on link below on Read More bu
             </div>
           </div>
         </section>
+
+        <!-- Figure -->
+        <section class="tables" id="lod">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="section-heading">
+                  <h2>LODVIEW</h2>
+                </div>
+                <div style="height: 100px;
+  width: 70;">
+<img src="assets/images/lodsome.png" alt="Lodview representation"/>
+</div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
       </div>
     </div>
       <!-- Sidebar -->
@@ -549,6 +583,7 @@ For the detailed schema and it's description click on link below on Read More bu
                     <li><a href="#example">Example Resource</a></li>
                     <li><a href="#query">Queries</a></li>
                     <li><a href="#void">Void Representation</a></li>
+                    <li><a href="#dref">Dereferencing</a></li>
                     <li><a href="#usage">Usage</a></li>
 
                   </ul>
@@ -611,7 +646,6 @@ For the detailed schema and it's description click on link below on Read More bu
             <!-- Footer
             <footer id="footer">
               <p class="copyright"> Maintainers : <a href="https://dice-research.org/ManzoorAli">Manzoor Ali </a>   <a href="https://dice-research.org/MuhammadSaleem">Muhammad Saleem</a> </p>
-
             </footer>
 -->
           </div>
