--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ For the detailed schema and it's description click on link below on Read More bu
 
                 <div class="down-content">
                   <h4>Dereferencing our resources</h4>
-                  <p> We also allow dereferencing our dataset URIs using LodView <a href="http://reld.cs.upb.de:8080/lodview/R-1.0.html">link</a>. LodView allows RELD users to browse our RDF resource and offers easy-to-use representation of the RDF data. An example resource from the LodView is shown in the <a href="">figure</a>.</p>
+                  <p> We also allow dereferencing our dataset URIs using LodView <a href="http://reld.cs.upb.de:8080/lodview/R-1.0.html">link</a>. LodView allows RELD users to browse our RDF resource and offers easy-to-use representation of the RDF data. An example resource from the LodView is shown in the <a href="#lod">figure</a>.</p>
                 </div>
               </div>
             </div>
