--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
   <head>
-
+    <script>
+    window.onload = function() {
+    location.href = "https://www.javascripttutorial.net/";
+      }
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A knowledge Graph of RE">
