--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <script>
     window.onload = function() {
-    location.href = "https://www.javascripttutorial.net/";
+    location.href = "https://reld-tutorial.readthedocs.io/en/latest/intro.html";
       }
     </script>
     <meta charset="utf-8">
