--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -534,7 +534,7 @@
     <!-- Blog End -->
 
 
-    <!-- Contact Start -->
+    <!-- Contact Start
     <div class="container-fluid py-5" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -578,7 +578,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Contact End -->
 
 
