--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -111,7 +111,13 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Researcher & Developer</h3>
-                    <p>I'm a doctoral student and NLP enthusiast, researcher, developer, educator, and data scientist. I am a early stage researcher at DICE, a research group dedicated to making knowledge graphs more accessible and useful, I am doing my Ph.D. from the University of Paderborn Germany.</p>
+                    <p>Welcome to my portfolio page. As a highly motivated and accomplished doctoral student, I am passionate about exploring the fascinating world of Natural Language Processing (NLP) and leveraging its potential to drive innovation and progress in a variety of fields. I have extensive experience as a researcher, developer, educator, and data scientist, and have dedicated myself to achieving success through hard work, creativity, and innovation.
+
+Currently, I am serving as an early-stage researcher at DICE, a prominent research group devoted to enhancing the accessibility and efficacy of knowledge graphs. My contributions to this dynamic field have already earned me recognition and praise from colleagues and peers alike. Additionally, I am pursuing my Ph.D. at the prestigious University of Paderborn in Germany, which has provided me with a world-class education and valuable opportunities to engage with leading-edge research in the field.
+
+My diverse skill set and expertise in NLP, combined with my passion and dedication to my work, have prepared me to make valuable contributions to any project or initiative. Whether you are seeking expertise in research, development, education, or data science, I am confident that my skills, experience, and commitment to excellence make me the ideal candidate for your next project.
+
+Please take a moment to explore my portfolio, which showcases some of my recent work and highlights my strengths. If you are interested in learning more about my services or discussing a potential collaboration, please don't hesitate to contact me. Thank you for considering my credential</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Manzoor Ali</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">1 January 1988</span></h6></div>
