--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Researcher & Developer</h3>
-                    <p>Welcome to my portfolio page. As a highly motivated and accomplished Ph.D. student, I am passionate about exploring the world of Natural Language Processing, and leveraging its potential to drive innovation and progress in a variety of fields. I have extensive experience as a researcher, developer, educator, and data scientist, and have dedicated myself to achieving success through hard work, creativity, and innovation.
+                    <p align="justify">Welcome to my portfolio page. As a highly motivated and accomplished Ph.D. student, I am passionate about exploring the world of Natural Language Processing, and leveraging its potential to drive innovation and progress in a variety of fields. I have extensive experience as a researcher, developer, educator, and data scientist, and have dedicated myself to achieving success through hard work, creativity, and innovation.
 
 Currently, I am serving as an early-stage researcher at DICE, a prominent research group devoted to enhancing the accessibility and efficacy of knowledge graphs. My contributions to this dynamic field have already earned me recognition and praise from colleagues and peers alike. Additionally, I am pursuing my Ph.D. at the prestigious University of Paderborn in Germany.
 
@@ -126,11 +126,11 @@ Please take a moment to explore my portfolio.</p>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+49 17662803170</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">manzoorali29@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">305 TP6 Technology Park, Paderborn, Germany</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
+                        <!-- <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div> -->
 			<div class="col-sm-6 py-2"><h6>Collaboration: <span class="text-secondary">Open</span></h6></div>
                     </div>
-                    <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="" class="btn btn-outline-primary">Learn More</a>
+                  <!--  <a href="" class="btn btn-outline-primary mr-4">Hire Me</a> -->
+                    <a href="https://dice-research.org/ManzoorAli" class="btn btn-outline-primary">Learn More</a>
                 </div>
             </div>
         </div>
