--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -520,7 +520,7 @@ Please take a moment to explore my portfolio.</p>
                             <small class="text-white text-uppercase">Dec</small>
                         </div>
                     </div>
-                    <h5 class="font-weight-medium mb-4">Submitted our work RELD</h5>
+                    <h5 class="font-weight-medium mb-4">Presented our work RELD at <a href="https://2023.eswc-conferences.org/">ESWC 2023</a> Crete Greece</h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="https://reld-tutorial.readthedocs.io/en/latest/">Read More</a>
                 </div>
                 <div class="col-lg-4 mb-5">
