--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -501,6 +501,17 @@ Please take a moment to explore my portfolio.</p>
                 <h1 class="position-absolute text-uppercase text-primary">Latest Projects</h1>
             </div>
             <div class="row">
+		<div class="col-lg-4 mb-5">
+                    <div class="position-relative mb-4">
+                        <img class="img-fluid rounded w-100" src="img/nldb.jpeg" alt="">
+                        <div class="blog-date">
+                            <h4 class="font-weight-bold mb-n1">25</h4>
+                            <small class="text-white text-uppercase">June 24</small>
+                        </div>
+                    </div>
+                    <h5 class="font-weight-medium mb-4">Presented our work data Aug using LLM <a href="https://2023.eswc-conferences.org/">NLDB 2024</a> Turin, Italy</h5>
+                    <a class="btn btn-sm btn-outline-primary py-2" href="https://reld-tutorial.readthedocs.io/en/latest/">Read More</a>
+                </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="img/re1.jpeg" alt="">
@@ -531,7 +542,7 @@ Please take a moment to explore my portfolio.</p>
                             <small class="text-white text-uppercase">Oct</small>
                         </div>
                     </div>
-                    <h5 class="font-weight-medium mb-4">Presented our work REBench at ISWC China.</h5>
+                    <h5 class="font-weight-medium mb-4">Presented our work REBench at <a href="https://iswc2022.semanticweb.org/">ISWC 2022</a> Hangzhou, China.</h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="https://iswc2022.semanticweb.org/">Read More</a>
                 </div>
             </div>
