--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -210,6 +210,15 @@ Please take a moment to explore my portfolio.</p>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">Python</h6>
+                            <h6 class="font-weight-bold">90%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+		    <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">LLM</h6>
                             <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
