--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -514,12 +514,23 @@ Please take a moment to explore my portfolio.</p>
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="img/nldb.jpeg" alt="">
                         <div class="blog-date">
+                            <h4 class="font-weight-bold mb-n1">17</h4>
+                            <small class="text-white text-uppercase">Sep 24</small>
+                        </div>
+                    </div>
+                    <h5 class="font-weight-medium mb-4">Presented our work Cot-SPARQL NL to SPARQL using LLM <a href="https://2024-eu.semantics.cc/">SEMANTiCs 2024</a> Amsterdam, NL</h5>
+                    <a class="btn btn-sm btn-outline-primary py-2" href="https://papers.dice-research.org/2024/SEMANTICS_Cot-SPARQL/public.pdf">Read More</a>
+                </div>
+		<div class="col-lg-4 mb-5">
+                    <div class="position-relative mb-4">
+                        <img class="img-fluid rounded w-100" src="img/nldb.jpeg" alt="">
+                        <div class="blog-date">
                             <h4 class="font-weight-bold mb-n1">25</h4>
                             <small class="text-white text-uppercase">June 24</small>
                         </div>
                     </div>
-                    <h5 class="font-weight-medium mb-4">Presented our work data Aug using LLM <a href="https://2023.eswc-conferences.org/">NLDB 2024</a> Turin, Italy</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2" href="https://reld-tutorial.readthedocs.io/en/latest/">Read More</a>
+                    <h5 class="font-weight-medium mb-4">Presented our work data Aug using LLM <a href="https://nldb2024.di.unito.it/">NLDB 2024</a> Turin, Italy</h5>
+                    <a class="btn btn-sm btn-outline-primary py-2" href="https://papers.dice-research.org/2024/NLDB_RE_Aug_LLM/public.pdf">Read More</a>
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
