--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -512,7 +512,7 @@ Please take a moment to explore my portfolio.</p>
             <div class="row">
 		<div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="img/nldb.jpeg" alt="">
+                        <img class="img-fluid rounded w-100" src="img/semantics.png" alt="">
                         <div class="blog-date">
                             <h4 class="font-weight-bold mb-n1">17</h4>
                             <small class="text-white text-uppercase">Sep 24</small>
