Copy rights update

--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -638,7 +638,7 @@ Please take a moment to explore my portfolio.</p>
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Manzoor Ali</a>. All Rights Reserved.
+            <p class="m-0">2025&copy; <a class="text-white font-weight-bold" href="#">Manzoor Ali</a>. All Rights Reserved.
             </p>
         </div>
     </div>
